Fix button text contrast to comply with WCAG AA (#269)
Currently 1.34:1, but WCAG AA requires 4.5:1.

--- a/docs/_static/try_examples.css
+++ b/docs/_static/try_examples.css
@@ -11,6 +11,7 @@
   font-family: vibur;
   font-size: larger;
   box-shadow: 0 2px 5px rgba(108, 108, 108, 0.2);
+  color: black;
 }
 
 .try_examples_button:hover {
@@ -18,6 +19,7 @@
   transform: scale(1.02);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+  color: white;
 }
 
 .try_examples_button_container {
